jsoup changelog

*** Release 1.11.2 [PENDING]
  * Fixed an issue where in a deep DOM stack, a StackOverFlow exception could occur when generating implied end tags.
    <https://github.com/jhy/jsoup/issues/966>

  * Fixed an issue when parsing large attribute values (e.g. image data values) where a character on a buffer boundary
    read was dropped.
    <https://github.com/jhy/jsoup/issues/967>

*** Release 1.11.1 [2017-Nov-06]
  * Updated language level to Java 7 from Java 5. To maintain Android support (of minversion 8), try-with-resources are
    not used.
    <https://github.com/jhy/jsoup/issues/899>

  * When loading content from a URL or a file, the content is now parsed as it streams in from the network or disk,
    rather than being fully buffered before parsing. This substantially reduces memory consumption & large garbage
    objects when loading large files. Note that this change means that a response, once parsed, may not be parsed
    again from the same response object unless you call response.bufferUp() first, which will buffer the full response
    into memory.
    <https://github.com/jhy/jsoup/issues/904>

  * Added Connection.Response.bodyStream(), a method to get the response body as an input stream. This is useful for
    saving a large response straight to a file, without buffering fully into memory first.

  * Performance improvements in text and HTML generation (through less GC).

  * Reduced memory consumption of text, scripts, and comments in the DOM by 40%, by refactoring the node
    hierarchy to not track childnodes or attributes by default for lead nodes. For the average document, that's about a
    30% memory reduction.
    <https://github.com/jhy/jsoup/issues/911>

  * Reduced memory consumption of Elements by refactoring their Attributes to be a simple pair of arrays, vs a
    LinkedHashSet.
    <https://github.com/jhy/jsoup/issues/911>

  * Added support for Element.selectFirst(query), to efficiently find the first matching element.