@@ -8,6 +8,9 @@ jsoup changelog
     read was dropped.
     <https://github.com/jhy/jsoup/issues/967>
 
+  * Fixed an issue that prevented using infinite timeouts in Jsoup.Connection.
+    <https://github.com/jhy/jsoup/issues/968>
+
 *** Release 1.11.1 [2017-Nov-06]
   * Updated language level to Java 7 from Java 5. To maintain Android support (of minversion 8), try-with-resources are
     not used.
